--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
   <groupId>com.atguigu.springcloud</groupId>
   <artifactId>cloud2020</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <modules>
+        <module>cloud-consumer-order80</module>
+    </modules>
+    <packaging>pom</packaging>
 
 
   <!-- 统一管理jar包版本 -->
