--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>cloud-consumer-order80</module>
         <module>cloud-api-commons</module>
+      <module>cloud-eureka-server7001</module>
     </modules>
     <packaging>pom</packaging>
 
