--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
       <module>cloud-api-commons</module>
       <module>cloud-eureka-server7001</module>
       <module>cloud-eureka-server7002</module>
+        <module>cloud-consumer-feign-order80</module>
+        <module>cloud-provider-hystrix-payment8001</module>
     </modules>
     <packaging>pom</packaging>
 
